--- a/StudioManager.API/appsettings.json
+++ b/StudioManager.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=StudioManager;Integrated Security=True"
+  }
 }
